# Intrant-Inferis-Contracts

./: Anchor.toml  GameIdl.cs  README.md
programs/intrant-inferis/: Cargo.toml
programs/intrant-inferis/src/: lib.rs
tests/: intrant-inferis.ts
