[package]
name = "intrant-inferis"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "intrant_inferis"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.27.0"
anchor-spl = "0.27.0"
blake3 = "=1.3.1"
solana-program = "=1.14.17"
winnow = "=0.4.1"
toml_datetime = "=0.6.1"
gpl-session = { version = "1.0.0", features = ["no-entrypoint"] }
